--- a/styles.css
+++ b/styles.css
@@ -599,6 +599,12 @@ html {
 
 
 
+.about-work h1 {
+    text-align: center;
+    font-size: 36px;
+    margin: 20px 0;
+    color: #333; 
+}
 
 .about-work {
     padding: 40px 0;
