--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ body {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+a.no-deco,
+a.no-dec {
+    text-decoration: none;
+}
 
 nav {
     position: fixed;
