--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,12 @@ a.no-dec {
 }
 
 nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
+     position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    z-index: 1000 !important;
+    display: flex !important;
     justify-content: space-between;
     align-items: center;
     background: linear-gradient(135deg, #6a11cb, #2575fc);
@@ -37,8 +38,8 @@ nav {
     height: 46px;
     color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
 }
+
 
 .nav-left a {
     color: #fff;
