--- a/steel-bars-calculator/styles.css
+++ b/steel-bars-calculator/styles.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 66px; /* Offset for the fixed nav */
+    padding-top: 66px;
 }
 
 .container {
@@ -15,6 +15,7 @@
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     width: 600px;
+    align-items: center;
     text-align: center;
     margin: 20px 0;
 }
@@ -48,6 +49,7 @@ header p {
 section.container {
     padding: 0;
     margin: 0;
+    align-items: center;
 }
 
 
@@ -57,6 +59,7 @@ section.container {
     justify-content: space-around;
     margin: 10px auto 20px;
     gap: 10px;
+    align-items: center;
     max-width: 100%;
 }
 
