--- a/steel-bars-calculator/style.css
+++ b/steel-bars-calculator/style.css
@@ -15,9 +15,13 @@
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     width: 600px;
-    align-items: center;
     text-align: center;
-    margin: 20px 0;
+    margin: 20px auto; 
+}
+
+section.container {
+    padding: 20px; 
+    margin: 20px auto; 
 }
 
 header {
@@ -46,11 +50,6 @@ header p {
     margin: 10px auto;
 }
 
-section.container {
-    padding: 0;
-    margin: 0;
-    align-items: center;
-}
 
 
 .button-group {
